# PersonaCore

./: .gitignore  CLAUDE.md  Makefile  README.md  demo.ipynb  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/worktrees/: settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-scaffolding-reproducible-environment/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  VERIFICATION.md
.planning/phases/02-from-scratch-bpe-tokenizer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-bigram-baseline-training-harness/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-gpt-transformer-decoder/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-tinystories-pretraining/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-generation-sampling/: 06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-evaluation/: 07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-HUMAN-UAT.md  07-RESEARCH.md  07-REVIEW-FIX.md  07-VERIFICATION.md  deferred-items.md
.planning/phases/08-demo-writeup/: 08-01-PLAN.md  (+19 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
artifacts/: tokenizer.json
docs/: REPORT.md
results/: abl_baseline.csv  abl_calibration.csv  abl_depth_cut.csv  abl_no_pos.csv  abl_no_tie.csv  results.md  run.csv  samples.md
scripts/: demo_app.py  encode_corpus.py  estimate_fisher_tinystories.py  evaluate.py  export_slim.py  preflight_demo.py  pretrain_tinystories.py  run_ablations.py  train_adapter_smoke.py  train_bigram.py  train_tokenizer.py
src/personacore/: __init__.py  checkpoint.py  config.py  logging.py  preflight.py  provenance.py  seeding.py
tests/: conftest.py  test_ablation_config.py  test_assemble_loss.py  test_best_ckpt.py  test_bigram_model.py  test_checkpoint.py  test_config.py  test_data_split.py  test_demo_callback.py  test_ewc_penalty.py  test_fisher.py  test_fisher_checkpoint.py  test_forbid_ids.py  test_generation.py  test_generation_text.py  test_gpt_attention_equiv.py  test_gpt_causality.py  test_gpt_init.py  test_gpt_layernorm.py  test_gpt_lora_seam.py  test_gpt_model.py  test_gpt_overfit.py  test_gpt_param_count.py  test_gpt_weight_tying.py  test_logging.py  test_loop_penalty_fn.py  test_lora_artifact.py  test_lora_inject.py  test_lora_layer.py  test_lora_merge.py  test_lora_toggle.py  test_lora_training.py  test_lr_schedule.py  test_memmap_data.py  test_mps_smoke.py  test_overfit_batch.py  test_package.py  test_perplexity.py  test_preflight.py  test_resume_curve.py  (+9 more)
tests/fixtures/: __init__.py  bigram_corpus.txt  golden_trajectory_v1.json  tiny_corpus.txt  tinystories_fixture.txt  tricky_strings.py
(+97 files in other folders)
