[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "personacore"
version = "0.1.0"
description = "A from-scratch on-device conversational AI whose memory lives in the model weights."
requires-python = ">=3.10,<3.12"
dependencies = [
  "numpy~=2.4",
  "regex~=2026.5",
]

[project.optional-dependencies]
cpu = ["torch==2.7.*"]
demo = ["gradio>=5,<6", "matplotlib~=3.10"]
dev = ["pytest~=9.0", "ruff~=0.15", "tiktoken~=0.13"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]